removed para in bio, fixed some 3d spacing

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -72,8 +72,7 @@ code {
 }
 
 .siteBodyInner {
-	padding: 0;
-	padding: 90px;
+	padding: 20px 70px;
 }
 
 .bioInner {
